--- a/index.html
+++ b/index.html
@@ -4,4 +4,9 @@
         <meta charset="utf-8">
         <title>Recipes</title>
     </head> 
+
+    <body>
+        <h1><strong>Odin Recipes</strong></h1>
+            <a href="./recipes/wellington.html">Beef wellington</a>
+    </body>
 </html>
