--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -6,6 +6,9 @@
     </head> 
 
     <body>
-        <h1><strong>Beef Wellington</strong></h1>
+        <h1><strong>
+            Beef Wellington
+            <img src="../../../images/download.jpeg" alt="a loaf of medium rare beef wellington">
+        </strong></h1>
     </body>
 </html>
