--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -6,9 +6,7 @@
     </head> 
 
     <body>
-        <h1><strong>
-            Beef Wellington
-            <img src="../../../images/download.jpeg" alt="a loaf of medium rare beef wellington">
-        </strong></h1>
+        <h1><strong>Beef Wellington</strong></h1>
+        <p><img src="../../../images/download.jpeg" alt="a loaf of medium rare beef wellington"></p>
     </body>
 </html>
