--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1><strong>Beef Wellington</strong></h1>
-        <p><img src="../../../images/download.jpeg" alt="a loaf of medium rare beef wellington"></p>
-    </body>
+            <p><img src="../../../images/download.jpeg" alt="a loaf of medium rare beef wellington"></p>
+                <h2><strong>Description</strong></h2>
+                    <p>The <em>showstopper</em>. The beef wellington is a sophisticated and elegant dish that is sure to be the center of everyone's eye at any table. This dish has it's fair share of moving parts and intimidates many. That being said, organization is your friend with this recipe.</p>
+                    <p>Beef Wellington at it's simplist is a steak wrapped in duxelle, prosciutto, and puff pastry; baked. Pretty simple right. The hardest part of this recipe is the time investment however I can promise you the end result will be more then worth it. Stay organized and this will be a piece of cake.</p>
+            </body>
 </html>
