--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -9,7 +9,22 @@
         <h1><strong>Beef Wellington</strong></h1>
             <p><img src="../../../images/download.jpeg" alt="a loaf of medium rare beef wellington"></p>
                 <h2><strong>Description</strong></h2>
-                    <p>The <em>showstopper</em>. The beef wellington is a sophisticated and elegant dish that is sure to be the center of everyone's eye at any table. This dish has it's fair share of moving parts and intimidates many. That being said, organization is your friend with this recipe.</p>
-                    <p>Beef Wellington at it's simplist is a steak wrapped in duxelle, prosciutto, and puff pastry; baked. Pretty simple right. The hardest part of this recipe is the time investment however I can promise you the end result will be more then worth it. Stay organized and this will be a piece of cake.</p>
-            </body>
+                    <p>The <em>showstopper</em>. Beef Wellington is a dish that consists of a cut of beef that is coated in pate, wrapped in puff pastry, and baked until the pastry is a beautiful golden brown. The classic English dish is named after Arthur Wellesley, 1st Duke of Wellington.</p>
+                    <p>This beef Wellington recipe includes a rich red wine sauce. It's easier than you think to make and absolutely perfect for entertaining at Christmas or any time you want to impress your guests! The beef tenderloin is best served medium-rare.</p>
+                        <h2><strong>Ingredients</strong></h2>
+                            <uo>
+                                <li>2 1/2 pounds beef tenderloin</li>
+                                <li>4 tablespoons butter, softened, divided</li>
+                                <li>2 tablespoons butter</li>
+                                <li>1 onion, chopped</li>
+                                <li>1/2 cup sliced fresh mushrooms</li>
+                                <li>2 ounces liver pate</li>
+                                <li>salt and pepper to taste</li>
+                                <li>1 (17.5 ounce) package frozen puff pastry, thawed</li>
+                                <li>1 large egg yolk, beaten</li>
+                                <li>1 (10.5 ounce) can beef broth</li>
+                                <li>2 tablespoons red wine</li>
+                            </uo>
+            
+                </body>
 </html>
