--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1><strong>Odin Recipes</strong></h1>
-            <p><a href="./recipes/wellington.html" target="_blank" rel="noopener noreferrer">Beef wellington</a></p>
+            <p><a href="./recipes/wellington.html" target="_blank" rel="noopener noreferrer">Beef Wellington</a></p>
     </body>
 </html>
