--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1><strong>Odin Recipes</strong></h1>
-            <p><a href="./recipes/wellington.html" target="_blank" rel="noopener noreferrer">Beef Wellington</a></p>
+            <ul>
+                <li><a href="./recipes/wellington.html" target="_blank" rel="noopener noreferrer">Beef Wellington</a></li>
+                <li><a href="./recipes/ratatouille.html" target="_blank" rel="noopener noreferrer">Ratatouille</a></li>
+                <li><a href="./recipes/macncheese.html" target="_blank" rel="noopener noreferrer"> Mac N'Chesse</a></li>
+            </ul>
     </body>
 </html>
