--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -7,9 +7,9 @@
 
     <body>
         <h1><stong>Mac N'Cheese</stong></h1>
-            <p><img src="../../../images/macncheese.jpg" alt="a gourmet bowl of mac and cheese"></p>
+            <p><img src="../../../images/macncheese.jepg" alt="a gourmet bowl of mac and cheese"></p>
                 <h2><strong>Description</strong></h2>
-                    
+
     </body>
 
 </html>
