--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -9,7 +9,31 @@
         <h1><stong>Mac N'Cheese</stong></h1>
             <p><img src="../../../images/macncheese.jpeg" alt="a gourmet bowl of mac and cheese"></p>
                 <h2><strong>Description</strong></h2>
-
+                    <p>Looking for a homemade alternative to boxed mac and cheese that's just as quick and easy? This stovetop mac and cheese uses staple ingredients and comes together in just 25 minutes. You'll want to bookmark this recipe for busy weeknights. The good news is, it's so simple that once you make it a couple times, you'll likely have it memorized.</p>
+                    <p>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to prepare when you have so many expensive cheeses, but they aren't always the best tasting. This simple recipe is cheap and tasty.</p>
+                        <h2><strong>Ingredients</strong></h2>
+                            <ul>
+                                <li>1 (8 ounce) box elbow macaroni</li>
+                                <li>1/4 cup butter</li>
+                                <li>1/4 cup all-purpose flour</li>
+                                <li>1/2 teaspoon salt</li>
+                                <li>ground black pepper to taste</li>
+                                <li>2 cups milk</li>
+                                <li>2 cups shredded Cheddar cheese</li>
+                            </ul>
+                                <h2><strong>Steps</strong></h2>
+                                    <ol>
+                                        <li>Bring a pot of water to a boil. Cook elbow macaroni until al dente, about 8 minutes. <em>(tip: For a thicker mac and cheese, double the amount of macaroni)</em></li>
+                                        <li>
+                                            <p>While the macaroni is cooking, go ahead and start on the roux. A roux is a thickening agent made of one part fat and one part flour that makes up the base of this creamy mac and cheese.</p>
+                                            <p>To make the roux, start by melting butter in a saucepan over medium heat. Add flour, salt, and pepper and stir until smooth. Slowly pour in milk and stir until the mixture is smooth and bubbling. Be careful to not let the milk burn.</p>
+                                        </li>
+                                        <li>
+                                            <p>Finally, the most crucial step: Add cheese! Slowly stir in Cheddar cheese until smooth and melted. We recommend you grate your own cheese because pre-shredded cheese won't incorporate into the mixture as well as block cheese.</p>
+                                            <p>Once the macaroni is finished cooking, drain and stir into cheese sauce until coated.</p>
+                                        </li>
+                                    </ol>
+    
     </body>
 
 </html>
