--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -8,7 +8,24 @@
     <body>
         <h1>Ratatouille</h1>
             <p><img src="../../../images/ratatouille.jpeg" alt="a baking pan of delicious ratatouille"></p>
-
-
+                <h2><Strong>Description</Strong></h2>
+                    <p>This Disney ratatouille recipe makes the beautiful dish served up in the movie of the same name. Long and narrow vegetables work best. Serve with crusty bread or over a bed of brown rice, couscous, or pasta.</p>
+                        <h2><strong>Ingredients</strong></h2>
+                            <ul>
+                                <li>1 (6 ounce) can tomato paste</li>
+                                <li>1/2 onion, chopped</li>
+                                <li>1/4 cup minced garlic</li>
+                                <li>3/4 cup water</li>
+                                <li>4 tablespoons olive oil, divided</li>
+                                <li>salt and ground black pepper to taste</li>
+                                <li>1 small eggplant, trimmed and very thinly sliced</li>
+                                <li>1 zucchini, trimmed and very thinly sliced</li>
+                                <li>1 yellow squash, trimmed and very thinly sliced</li>
+                                <li>1 red bell pepper, cored and very thinly sliced</li>
+                                <li>1 yellow bell pepper, cored and very thinly sliced</li>
+                                <li>1 teaspoon fresh thyme leaves, or to taste</li>
+                                <li>3 tablespoons mascarpone cheese</li>
+                            </ul>
+                                
     </body>
 </html>
