Renamed image file
adjusted name of image file

--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1><strong>Beef Wellington</strong></h1>
-            <p><img src="../../../images/download.jpeg" alt="a loaf of medium rare beef wellington"></p>
+            <p><img src="../../../images/wellington.jpeg" alt="a loaf of medium rare beef wellington"></p>
                 <h2><strong>Description</strong></h2>
                     <p>The <em>showstopper</em>. Beef Wellington is a dish that consists of a cut of beef that is coated in pate, wrapped in puff pastry, and baked until the pastry is a beautiful golden brown. The classic English dish is named after Arthur Wellesley, 1st Duke of Wellington.</p>
                     <p>This beef Wellington recipe includes a rich red wine sauce. It's easier than you think to make and absolutely perfect for entertaining at Christmas or any time you want to impress your guests! The beef tenderloin is best served medium-rare.</p>
