--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Recipes</title>
-    </head> 
+    <html lang="en">
+        <head>
+            <meta charset="utf-8">
+            <title>
+                Recipes
+            </title>
+        </head> 
 
-    <body>
-        <h1><strong>Odin Recipes</strong></h1>
-            <ul>
-                <li><a href="./recipes/wellington.html" target="_blank" rel="noopener noreferrer">Beef Wellington</a></li>
-                <li><a href="./recipes/ratatouille.html" target="_blank" rel="noopener noreferrer">Ratatouille</a></li>
-                <li><a href="./recipes/macncheese.html" target="_blank" rel="noopener noreferrer"> Mac N'Chesse</a></li>
-            </ul>
-    </body>
-</html>
+            <body>
+                <h1><strong>
+                    Odin Recipes
+                </strong></h1>
+                    <ul>
+                        <li><a 
+                            href="./recipes/wellington.html" target="_blank" rel="noopener noreferrer">Beef Wellington
+                        </a></li>
+                        <li><a 
+                            href="./recipes/ratatouille.html"target="_blank" rel="noopener noreferrer">Ratatouille
+                        </a></li>
+                        <li><a 
+                            href="./recipes/macncheese.html" target="_blank" rel="noopener noreferrer">Mac N'Chesse
+                        </a></li>
+                    </ul>
+            </body>
+    </html>
