--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -1,38 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Ratatouille</title>
-    </head>
+    <html lang="en">
+        <head>
+            <meta charset="utf-8">
+            <title>
+                Ratatouille
+            </title>
+        </head>
 
-    <body>
-        <h1>Ratatouille</h1>
-            <p><img src="../../../images/ratatouille.jpeg" alt="a baking pan of delicious ratatouille"></p>
-                <h2><Strong>Description</Strong></h2>
-                    <p>This Disney ratatouille recipe makes the beautiful dish served up in the movie of the same name. Long and narrow vegetables work best. Serve with crusty bread or over a bed of brown rice, couscous, or pasta.</p>
-                        <h2><strong>Ingredients</strong></h2>
+            <body>
+                <h1><strong>
+                    Ratatouille
+                </strong></h1>
+                    <img src="../../../images/ratatouille.jpeg" alt="a baking pan of delicious ratatouille">
+                        <h2><strong>
+                            Description
+                        </strong>
+                            <p>
+                                This Disney ratatouille recipe makes the beautiful dish served up in the movie of the same name. Long and narrow vegetables work best. Serve with crusty bread or over a bed of brown rice, couscous, or pasta.
+                            </p>
+                        <h2><strong>
+                            Ingredients
+                        </strong></h2>
                             <ul>
-                                <li>1 (6 ounce) can tomato paste</li>
-                                <li>1/2 onion, chopped</li>
-                                <li>1/4 cup minced garlic</li>
-                                <li>3/4 cup water</li>
-                                <li>4 tablespoons olive oil, divided</li>
-                                <li>salt and ground black pepper to taste</li>
-                                <li>1 small eggplant, trimmed and very thinly sliced</li>
-                                <li>1 zucchini, trimmed and very thinly sliced</li>
-                                <li>1 yellow squash, trimmed and very thinly sliced</li>
-                                <li>1 red bell pepper, cored and very thinly sliced</li>
-                                <li>1 yellow bell pepper, cored and very thinly sliced</li>
-                                <li>1 teaspoon fresh thyme leaves, or to taste</li>
-                                <li>3 tablespoons mascarpone cheese</li>
+                                <li>
+                                    1 (6 ounce) can tomato paste
+                                </li>
+                                <li>
+                                    1/2 onion, chopped
+                                </li>
+                                <li>
+                                    1/4 cup minced garlic
+                                </li>
+                                <li>
+                                    3/4 cup water
+                                </li>
+                                <li>
+                                    4 tablespoons olive oil, divided
+                                </li>
+                                <li>
+                                    salt and ground black pepper to taste
+                                </li>
+                                <li>
+                                    1 small eggplant, trimmed and very thinly sliced
+                                </li>
+                                <li>
+                                    1 zucchini, trimmed and very thinly sliced
+                                </li>
+                                <li>
+                                    1 yellow squash, trimmed and very thinly sliced
+                                </li>
+                                <li>
+                                    1 red bell pepper, cored and very thinly sliced
+                                </li>
+                                <li>
+                                    1 yellow bell pepper, cored and very thinly sliced
+                                </li>
+                                <li>
+                                    1 teaspoon fresh thyme leaves, or to taste
+                                </li>
+                                <li>
+                                    3 tablespoons mascarpone cheese
+                                </li>
                             </ul>
-                                <h2><strong>Steps</strong></h2>
-                                    <ol>
-                                        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-                                        <li>Spread tomato paste onto the bottom of a 10-inch square baking dish. Sprinkle with onion and garlic. Stir in water and 1 tablespoon olive oil until thoroughly combined. Season with salt and pepper.</li>
-                                        <li>Arrange alternating slices of eggplant, zucchini, yellow squash, red bell pepper, and yellow bell pepper, starting at the outer edge of the dish and working concentrically towards the center. Overlap slices a little to display colors.</li>
-                                        <li>Drizzle vegetables with remaining 3 tablespoons olive oil; season with salt and pepper. Sprinkle with thyme leaves. Cover vegetables with a piece of parchment paper cut to fit inside.</li>
-                                        <li>Bake in the preheated oven until vegetables are roasted and tender, about 45 minutes. Serve with dollops of mascarpone cheese.</li>
-                                    </ol>
-    </body>
-</html>
+                        <h2><strong>
+                            Steps
+                        </strong></h2>
+                             <ol>
+                                <li>
+                                    Preheat the oven to 375 degrees F (190 degrees C).
+                                </li>
+                                <li>
+                                    Spread tomato paste onto the bottom of a 10-inch square baking dish. Sprinkle with onion and garlic. Stir in water and 1 tablespoon olive oil until thoroughly combined. Season with salt and pepper.
+                                </li>
+                                <li>
+                                    Arrange alternating slices of eggplant, zucchini, yellow squash, red bell pepper, and yellow bell pepper, starting at the outer edge of the dish and working concentrically towards the center. Overlap slices a little to display colors.
+                                </li>
+                                <li>
+                                    Drizzle vegetables with remaining 3 tablespoons olive oil; season with salt and pepper. Sprinkle with thyme leaves. Cover vegetables with a piece of parchment paper cut to fit inside.
+                                </li>
+                                <li>
+                                    Bake in the preheated oven until vegetables are roasted and tender, about 45 minutes. Serve with dollops of mascarpone cheese.
+                                </li>
+                            </ol>
+            </body>
+    </html>
