--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -14,7 +14,7 @@
                     <img src="../../../images/ratatouille.jpeg" alt="a baking pan of delicious ratatouille">
                         <h2><strong>
                             Description
-                        </strong>
+                        </strong></h2>
                             <p>
                                 This Disney ratatouille recipe makes the beautiful dish served up in the movie of the same name. Long and narrow vegetables work best. Serve with crusty bread or over a bed of brown rice, couscous, or pasta.
                             </p>
