--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                     Odin Recipes
                 </strong></h1>
                     <ul>
-                        <li><a 
+                        <li><button><a 
                             href="./recipes/wellington.html" target="_blank" rel="noopener noreferrer">Beef Wellington
-                        </a></li>
-                        <li><a 
+                        </a></button></li>
+                        <li><button><a 
                             href="./recipes/ratatouille.html"target="_blank" rel="noopener noreferrer">Ratatouille
-                        </a></li>
-                        <li><a 
+                        </a></button></li>
+                        <li><button><a 
                             href="./recipes/macncheese.html" target="_blank" rel="noopener noreferrer">Mac N'Chesse
-                        </a></li>
+                        </a></button></li>
                     </ul>
             </body>
     </html>
