--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
+            <link rel="stylesheet" href="../stylesheets/wellington.css">
             <meta charset="utf-8">
             <title>
                 Beef Wellington
@@ -11,7 +12,7 @@
                 <h1><strong>
                     Beef Wellington
                 </strong></h1>
-                    <img src="../../../images/wellington.jpeg" alt="a loaf of medium rare beef wellington">
+                    <img class= "wellington" src="../../../images/wellington.jpeg" alt="a loaf of medium rare beef wellington">
                         <h2><strong>
                             Description
                         </strong></h2>
