--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -25,7 +25,7 @@
                          <h2><strong>
                                 Ingredients
                          </strong></h2>
-                            <ul>
+                            <ul class="unordered">
                                 <li>
                                     2 1/2 pounds beef tenderloin
                                 </li>
@@ -63,7 +63,7 @@
                         <h2><strong>
                             Steps
                         </strong></h2>
-                            <ol>
+                            <ol class="ordered">
                                 <li>
                                     Preheat the oven to 425 degrees F (220 degrees C).
                                 </li>
