--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
+            <link rel="stylesheet" href="../stylesheets/ratatouille.css">
             <meta charset="utf-8">
             <title>
                 Ratatouille
