--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -12,7 +12,7 @@
                 <h1><strong>
                     Ratatouille
                 </strong></h1>
-                    <img src="../../../images/ratatouille.jpeg" alt="a baking pan of delicious ratatouille">
+                    <img class="ratatouille" src="../../../images/ratatouille.jpeg" alt="a baking pan of delicious ratatouille">
                         <h2><strong>
                             Description
                         </strong></h2>
