--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
+            <link rel="stylesheet" href="../stylesheets/macncheese.css">
             <meta charset="utf-8">
             <title>
                 Mac N'Cheese
