--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -12,7 +12,7 @@
                 <h1><stong>
                     Mac N'Cheese
                 </stong></h1>
-                    <img src="../../../images/macncheese.jpeg" alt="a gourmet bowl of mac and cheese">
+                    <img class="mnc" src="../../../images/macncheese.jpeg" alt="a gourmet bowl of mac and cheese">
                         <h2><strong>
                             Description
                          </strong></h2>
